update waypoint botton display

--- a/autonomy_core/client/rqt_quadrotor_safety/resource/QuadrotorSafety.ui
+++ b/autonomy_core/client/rqt_quadrotor_safety/resource/QuadrotorSafety.ui
@@ -432,7 +432,7 @@
         </font>
        </property>
        <property name="text">
-        <string>Execute waypoints</string>
+        <string>Execute Waypoint Mission</string>
        </property>
       </widget>
      </item>
