--- a/autonomy_core/client/rqt_quadrotor_safety/resource/QuadrotorSafety.ui
+++ b/autonomy_core/client/rqt_quadrotor_safety/resource/QuadrotorSafety.ui
@@ -14,7 +14,7 @@
    <string>Quadrotor Steering</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="1" column="0">
+   <item row="0" column="0">
     <layout class="QGridLayout" name="gridLayout_2">
      <item row="15" column="2">
       <widget class="QLabel" name="odom_z_data">
@@ -421,7 +421,7 @@
        </property>
       </widget>
      </item>
-     <item row="24" column="4" colspan="2">
+     <item row="24" column="4">
       <widget class="QPushButton" name="takeoff_push_button">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
@@ -447,7 +447,7 @@
        </property>
       </widget>
      </item>
-     <item row="27" column="2" colspan="4">
+     <item row="27" column="2" colspan="3">
       <widget class="QPushButton" name="execute_waypoints_push_button">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
@@ -465,6 +465,42 @@
        </property>
        <property name="text">
         <string>Execute Waypoint Mission</string>
+       </property>
+      </widget>
+     </item>
+     <item row="24" column="5">
+      <widget class="QPushButton" name="reset_mission_push_button">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Reset Mission</string>
+       </property>
+      </widget>
+     </item>
+     <item row="27" column="5">
+      <widget class="QPushButton" name="skip_next_waypoint_push_button">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Skip Next Waypoint</string>
        </property>
       </widget>
      </item>
